<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/companydetaillayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1d1d1d"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/companylogo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_marginLeft="@dimen/companylabelmargin_size"
            android:layout_marginRight="@dimen/companylabelmargin_size"
            android:layout_marginTop="@dimen/companylabelmargin_size"
            android:layout_marginBottom="@dimen/companylabelmargin_size"
            android:src="@drawable/sample_logo" />

        <TextView
            style="@style/whiteMono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textSize="@dimen/companytext_size"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tabgrouplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00abff">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/tab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Menu" />
                <Button
                    android:id="@+id/tab2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Order Summary" />

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
    <TextView
        android:id="@+id/menutype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Menu Type"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        style="@style/whiteMono"
        android:background="#00aba9"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <!--ScrollView
            android:id="@+id/menuscrollview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/companydetaillayout"
            android:layout_alignParentLeft="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <Button
                    android:id="@+id/menu1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu1" />

                <Button
                    android:id="@+id/menu2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu2" />

                <Button
                    android:id="@+id/menu3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu3" />

                <Button
                    android:id="@+id/menu4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu4" />

                <Button
                    android:id="@+id/menu5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu5" />

                <Button
                    android:id="@+id/menu6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu6" />

            </LinearLayout>
        </ScrollView-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00aba9">

            <GridLayout
                android:id="@+id/menugridlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:columnCount="2"
                android:rowCount="100">

                <Button
                    android:id="@+id/maincoursechoice1"
                    style="@style/darkorangebtn"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:text="@string/maincoursechoice1"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/menutext_size"/>

                <Button
                    android:id="@+id/maincoursechoice2"
                    style="@style/darkorangebtn"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:text="@string/maincoursechoice2"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/menutext_size"/>

                <Button
                    android:id="@+id/maincoursechoice3"
                    style="@style/darkorangebtn"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:text="@string/maincoursechoice3"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/menutext_size"/>

                <Button
                    android:id="@+id/maincoursechoice4"
                    style="@style/darkorangebtn"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:text="@string/maincoursechoice4"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/menutext_size"/>

                <Button
                    android:id="@+id/maincoursechoice5"
                    style="@style/darkorangebtn"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:text="@string/maincoursechoice5"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/menutext_size"/>

                <Button
                    android:id="@+id/maincoursechoice6"
                    style="@style/darkorangebtn"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:text="@string/maincoursechoice6"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/menutext_size"/>

            </GridLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>

